[project]
name = "deepest-crawl"
version = "0.1.0"
description = "Deep web crawler using real Chrome + vision-capable LLM"
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm>=0.5.0",
    "mlx-lm>=0.31.0",
    "open-browser-use-sdk>=0.1.40",
    "browser-harness>=0.1.0",
    "Pillow>=12",
    "huggingface-hub>=1.17",
]

[tool.uv]
dev-dependencies = []
