[project]
name = "deepest-crawl"
version = "0.1.0"
description = "Local real-browser crawl dashboard using Chrome and a local model server"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "mlx-vlm>=0.5.0",
    "mlx-lm>=0.31.0",
    "lxml>=5",
    "open-browser-use-sdk>=0.1.40",
    "Pillow>=12",
    "huggingface-hub>=1.17",
    "trafilatura>=2",
]

[dependency-groups]
dev = []
